--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdn.bootcss.com/axios/0.18.0/axios.min.js"></script>
+  <script src="https://cdn.bootcss.com/axios/0.17.1/axios.min.js"></script>
   <title>mvvm</title>
 </head>
 <body>
 <div id="app">
-  书名：《JavaScript高级程序设计》
-  数量： <span id="number">2</span>
- 
+  <div>
+      书名：《__name__》
+      数量： <span id="number">__number__</span>
+  </div>
+  <div>
+      <button id="addOne">加一</button>
+      <button id="minusOne">减一</button>
+      <button id="reset">清空</button>
+      <script src="./main.js"></script>    
+  </div>
 </div>
-   <button id="addOne">加一</button>
-  <button id="minusOne">减一</button>
-  <button id="reset">清空</button>
-  <script src="./main.js"></script>
+
 </body>
 </html>
